# fast-genomic-data-preprocessing

./: LICENSE  README.md
BWA-HUST/: .gitignore  Makefile  bwa.h  bwamem.h  bwamem_extra.c  bwt.c  bwt.h  bwt_gen.c  bwt_gen.h  kthread.h
BWA-HUST/ext/TAL/ext/safestringlib/: safestringtest
BWA-HUST/ext/TAL/src/FMI/: FMI_search.cpp
SortMarkDup/: CMakeLists.txt  main.cpp
SortMarkDup/bustub/: CMakeLists.txt  GPATH  GRTAGS  GTAGS
SortMarkDup/bustub/buffer/: buffer_pool_manager.cpp  lru_replacer.cpp
SortMarkDup/bustub/include/buffer/: buffer_pool_manager.h  lru_replacer.h
SortMarkDup/bustub/include/common/: config.h
SortMarkDup/bustub/include/container/hash/: hash_function.h
SortMarkDup/bustub/include/primer/: p0_starter.h
SortMarkDup/bustub/include/storage/: b_plus_tree_test_util.h
SortMarkDup/bustub/include/storage/disk/: disk_manager.h
SortMarkDup/bustub/include/storage/index/: b_plus_tree.h  index_iterator.h
SortMarkDup/bustub/include/storage/page/: b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  page.h
SortMarkDup/bustub/storage/disk/: disk_manager.cpp
SortMarkDup/bustub/storage/index/: b_plus_tree.cpp  index_iterator.cpp
SortMarkDup/bustub/storage/page/: b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp
bwa-mem-lcp/: Makefile  bntseq.c  bntseq.h  bwa.c  bwamem.cpp  bwamem_pair.c  bwtindex.cpp  fastmap.cpp  filename.dot  kopen.c  ksw.c  kthread.c  lf_run.sh  rope.c
bwa-mem-lcp/ext/TAL/ext/safestringlib/: safestringtest
bwa-mem-lcp/ext/TAL/src/FMI/: FMI_search.h
bwa-mem-lcp/ext/TAL/src/LISA-FMI/: LISA_search.h
